--- a/pom.xml
+++ b/pom.xml
@@ -74,21 +74,51 @@
                 <version>7.7.0</version>
                 <executions>
                     <execution>
+                        <id>generate-distribution-service-server</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                        <phase>generate-sources</phase>
                         <configuration>
-                            <inputSpec>
-                                ${project.basedir}/src/main/resources/petstore.yml
-                            </inputSpec>
-                            <generatorName>spring</generatorName>
-                            <apiPackage>com.baeldung.openapi.api</apiPackage>
-                            <modelPackage>com.baeldung.openapi.model</modelPackage>
-                            <supportingFilesToGenerate>
-                                ApiUtil.java
-                            </supportingFilesToGenerate>
+                            <generatorName>kotlin-spring</generatorName>
+                            <library>spring-boot</library>
+
+                            <inputSpec>${project.basedir}/src/main/resources/openapi/distribution-service-v1/openapi.yaml</inputSpec>
+                            <output>${project.build.directory}/generated-sources/openapi/distribution-service-v1</output>
+
+                            <apiPackage>no.tradesolution.bridge.distribution.service.server.api</apiPackage>
+                            <modelPackage>no.tradesolution.bridge.distribution.service.server.model</modelPackage>
+
+                            <generateApiDocumentation>true</generateApiDocumentation>
+                            <generateApiTests>false</generateApiTests>
+                            <generateApis>true</generateApis>
+                            <generateModelDocumentation>true</generateModelDocumentation>
+                            <generateModelTests>false</generateModelTests>
+                            <generateModels>true</generateModels>
+                            <generateSupportingFiles>true</generateSupportingFiles>
+
+                            <skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
+                            <strictSpec>true</strictSpec>
+                            <verbose>false</verbose>
+
+                            <!--
+                            Workaround for the following bug:
+                            https://github.com/OpenAPITools/openapi-generator/issues/14648
+                            -->
+                            <skipValidateSpec>true</skipValidateSpec>
+
                             <configOptions>
-                                <delegatePattern>true</delegatePattern>
+                                <booleanGetterPrefix>is</booleanGetterPrefix>
+                                <enumPropertyNaming>original</enumPropertyNaming>
+                                <interfaceOnly>true</interfaceOnly>
+                                <serializationLibrary>jackson</serializationLibrary>
+                                <serializableModel>false</serializableModel>
+                                <skipDefaultInterface>true</skipDefaultInterface>
+                                <sourceFolder>src/main/kotlin</sourceFolder>
+                                <useBeanValidation>false</useBeanValidation>
+                                <useJakartaEe>true</useJakartaEe>
+                                <useSpringBoot3>true</useSpringBoot3>
+                                <useTags>true</useTags>
                             </configOptions>
                         </configuration>
                     </execution>
