--- a/src/main/resources/description.yaml
+++ b/src/main/resources/description.yaml
@@ -18,7 +18,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
+                type: object
                 properties:
                   id:
                     type: integer
